--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,68 @@
-/*{
+*{
 	box-sizing:border-box;
-}*/
-#md-toolbar{
-  	background-color: #00897B;
-  }
+}
 
+md-sidenav, md-backdrop{
+	position: fixed;
+}
+
+#md-toolbar{
+  	background-image: url("../img/banner.jpg");
+  	background-repeat: no-repeat;
+  	background-size: cover;
+  	overflow: hidden;
+  	height: 150px;
+  	padding: 35px 10px;
+  	position: fixed;
+  	transition: all .6s cubic-bezier(.785,.135,.15,.86);
+  	display: block !important;
+}
+.logo-toolbar{
+	position:absolute;
+	top:0;
+	right: 0;
+	height: 100%;
+	width: auto;
+	z-index:-1;
+}
+
+#md-toolbar md-button, #md-toolbar h3 {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+
+#md-toolbar.header-scroll {
+  height: 80px;
+  padding: 2px 10px;
+}
+
+#md-toolbar::before {
+  content:'';
+  position: absolute; 
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #00897B;
+  opacity: 0;
+  transition: all .6s cubic-bezier(.785,.135,.15,.86);
+  z-index: -1;
+}
+
+#md-toolbar.header-scroll::before {
+  opacity: 1;
+  top: 0;
+}
+
+#toolbar-content{
+	padding-top: 155px;
+}
+
+md-dialog{
+	width:500px;
+	max-height: 95%
+}
 
  #content{
  	text-align: center;
@@ -24,6 +82,30 @@ md-card-content{
 	display: block;
 }
 
+#footer{
+	align-items:center;
+	justify-content:center;
+}
+.logo{
+	height: 60px;
+	margin:30px;
+	width: 145px;
+}
+
+md-sidenav .logo{
+	margin: 10px auto;
+}
+
+#footer p{
+	margin:0;
+	font-size: 13px;
+}
+
+#footer p:first-child{ /*nth-child(nro)*/
+	font-weight: bold;
+}
+
+
 @media screen and (max-width: 915px){
 	#content md-card{
 		width:46.7%;
@@ -36,14 +118,49 @@ md-card-content{
 		margin: 10px auto;
 		float:none;
 	}
+	.nav-buttons button{
+		float:right;
+	}
 }
 
-
-
-/*#content md-card{
-	transition: all 0.5s linear;
+@media screen and (max-width: 480px){
+	#md-toolbar h3{
+		width: 200px;
+	}
 }
 
-#content md-card:hover{
-	transform:scale(1.03);
-}*/
+@media screen and (max-width: 360px){
+	#md-toolbar h3{
+		font-size: 16px;
+	}
+	.logo-toolbar{
+		display: none;
+	}
+	#option-toolbar > div{
+		display: block;
+		float: none;
+		text-align: center;
+	}
+	#option-toolbar{
+		display: block !important;
+		overflow: hidden;
+	}
+	.nav-buttons button{
+		float: none;
+	}
+	md-dialog{
+		max-width: 100%;
+	}
+
+}
+
+@media screen and (max-width: 600px){
+
+	#md-toolbar h3{
+		font-size: 18px;
+	}
+
+	.md-button{
+		min-width: 0px !important;
+	}
+}
